main/c_project/.metadata/.plugins/org.eclipse.cdt.ui/12.build.log
15:46:53 **** Incremental Build of configuration Debug for project 12 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o 12.o "..\\12.c" 
..\12.c: In function 'choice':
..\12.c:27:9: error: expected declaration or statement at end of input
   27 |         }
      |         ^

15:46:53 Build Failed. 1 errors, 0 warnings. (took 150ms)

